--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   <meta name="csrf-token" content="{{ csrf_token() }}">
 <style>
     .dp__button {
-        display: none;
+    opacity: 0;
+    position: absolute;
     }
     * {
     	font-family:"游ゴシック Medium",YuGothic,YuGothicM,"Hiragino Kaku Gothic ProN","Hiragino Kaku Gothic Pro",メイリオ,Meiryo,sans-serif;
