--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-<meta charset="utf-8">
+<base target="_top">
+<meta http-equiv="content-type" charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
   <script src="https://cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js"></script>
@@ -14,8 +15,7 @@
   <meta name="csrf-token" content="{{ csrf_token() }}">
 <style>
     .dp__button {
-    opacity: 0;
-    position: absolute;
+        display: none;
     }
     * {
     	font-family:"游ゴシック Medium",YuGothic,YuGothicM,"Hiragino Kaku Gothic ProN","Hiragino Kaku Gothic Pro",メイリオ,Meiryo,sans-serif;
@@ -96,8 +96,15 @@
         flex:auto;
     }
     input[type=radio] {
-    opacity: 0;
-    position: absolute;
+        display: none;
+    }
+    /* Android用の特別なスタイル */
+    @media (pointer: coarse) {
+        .btn-info:active {
+            background-color: #fff;
+            color: #333;
+            border: solid 2px #333;
+        }
     }
 </style>
 </head>
