--- a/index.html
+++ b/index.html
@@ -1,235 +1,203 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-<base target="_top">
-<meta http-equiv="content-type" charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vue@3.2/dist/vue.global.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-  <link rel="stylesheet" href="https://unpkg.com/@vuepic/vue-datepicker@latest/dist/main.css">
-  <meta name="csrf-token" content="{{ csrf_token() }}">
-<style>
-    .dp__button {
-        display: none;
-    }
-    * {
-    	font-family:"游ゴシック Medium",YuGothic,YuGothicM,"Hiragino Kaku Gothic ProN","Hiragino Kaku Gothic Pro",メイリオ,Meiryo,sans-serif;
-    }
-    body {
-    	margin:0;
-    }
-    header {
-    	padding: 5px;
-    	background-color: #333;
-    	position: relative;
-    }
-    h2 {
-    	text-align:center;
-    	color: #fff;
-    	margin: 10px;
-    }
-    .btn-group>.btn, .btn-group-vertical>.btn {
-        float: none;
-        display: inline-block;
-    }
-    .btn-info {
-        color: #fff;
-        background-color: #333;
-        border-color: #FFF;
-    }
-    .btn-info:focus, .btn-info:active, .btn-info.active, .open>.dropdown-toggle.btn-info, .check {
-        color: #333;
-        background-color: #fff;
-        border: solid 2px #333;
-    }
-    .container {
-    	margin: 40px 0;
-    }
-    .form-group {
-        margin-bottom: 20px;
-    }
-    .use-span {
-    	width: 25%;
-    	font-size: 12px;
-    	padding: 6px;
-    	text-align: center;
-    }
-    .regist {
-    	background:red;
-    	border-color:red;
-    	width: 100%;
-    	padding: 20px 0;
-    	margin: 20px 0;
-    	color: #FFFFFF;
-    }
-    #error{
-        display:none;
-    }
-    #section { display: none; }
-    #family_count { display: none; }
-    .dp__input {
-        display: block;
-        width: 100%;
-        height: 34px;
-        padding: 6px 12px;
-        padding-left: 24px;
-        font-size: 14px;
-        line-height: 1.42857143;
-        color: #555;
-        background-color: #fff;
-        background-image: none;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-        transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
-    }
-    .dp__action_buttons {
-        flex:auto;
-    }
-    input[type=radio] {
-        display: none;
-    }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>予約フォーム</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/@vuepic/vue-datepicker@latest/dist/main.css">
+    <style>
+        body {
+            font-family: "游ゴシック Medium", YuGothic, YuGothicM, "Hiragino Kaku Gothic ProN", "Hiragino Kaku Gothic Pro", メイリオ, Meiryo, sans-serif;
+            margin: 0;
+        }
+        header {
+            padding: 5px;
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+        }
+        .container {
+            margin: 40px auto;
+            width: 90%;
+        }
+        .form-group {
+            margin-bottom: 20px;
+        }
+        .btn-group>.btn, .btn-group-vertical>.btn {
+            display: inline-block;
+        }
+        .btn-info {
+            color: #fff;
+            background-color: #333;
+            border-color: #fff;
+        }
+        .btn-info:focus, .btn-info:active, .btn-info.active, .open>.dropdown-toggle.btn-info, .check {
+            color: #333;
+            background-color: #fff;
+            border: solid 2px #333;
+        }
+        .btn-info.check {
+            color: #333;
+            background-color: #fff;
+        }
+        .regist {
+            background: red;
+            border-color: red;
+            width: 100%;
+            padding: 20px 0;
+            margin: 20px 0;
+            color: #fff;
+        }
+        .dp__input {
+            width: 100%;
+            height: 34px;
+            padding: 6px 12px;
+            font-size: 14px;
+            line-height: 1.42857143;
+            color: #555;
+            background-color: #fff;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+            transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+        }
+    </style>
 </head>
 <body>
-<header>
-	<h2>予約フォーム</h2>
-</header>
-<section id="app">
-	<div class="container" id="bring">
-        <div class="form-group">
-            <label>お客様名（カタカナ）</label>
-            <input v-model="name" type="text" name="customer_name" class="form-control" required>
-        </div>
-        <div class="form-group">
-            <label>電話番号</label>
-            <input v-model="tel" type="text" name="customer_tel" class="form-control" required>
-        </div>
-        <div class="form-group">
-            <label>ご来店回数</label>
-            <div class="btn-group" style="width:100%;">
-                <label class="btn btn-info" style="width: 49%;" for="first" :class="number === '初めて' ? 'check' : ''">
-                    <input value="初めて" type="radio" v-model="number" id="first">初めて
-                </label>
-                <label class="btn btn-info" style="width: 49%;" for="second" :class="number === '2回目以降' ? 'check' : ''">
-                    <input value="2回目以降" type="radio" v-model="number" id="second">2回目以降
-                </label>
-            </div>
-        </div>
-        <div class="form-group">
-            <label>症状</label>
-            <div class="btn-group" style="width:100%;">
-                <label class="btn btn-info" style="width: 100%;" :class="syoujou === '頭痛・偏頭痛' ? 'check' : ''" for="one">
-                    <input name="place" value="頭痛・偏頭痛" type="radio" required v-model="syoujou" id="one">頭痛・偏頭痛
-                </label>
-                <label class="btn btn-info" style="width: 100%;" :class="syoujou === '交通事故施術' ? 'check' : ''" for="two">
-                    <input name="place" value="交通事故施術" type="radio" required v-model="syoujou" id="two">交通事故施術
-                </label>
-                <label class="btn btn-info" style="width: 100%;" :class="syoujou === '肩こり・腕のしびれ' ? 'check' : ''" for="three">
-                    <input name="place" value="肩こり・腕のしびれ" type="radio" required v-model="syoujou" id="three">肩こり・腕のしびれ
-                </label>
-                <label class="btn btn-info" style="width: 100%;" :class="syoujou === '臀部・下肢の痛みや痺れ' ? 'check' : ''" for="four">
-                    <input name="place" value="臀部・下肢の痛みや痺れ" type="radio" required v-model="syoujou" id="four">臀部・下肢の痛みや痺れ
-                </label>
-                <label class="btn btn-info" style="width: 100%;" :class="syoujou === 'ぎっくり腰・慢性腰痛' ? 'check' : ''" for="five">
-                    <input name="place" value="ぎっくり腰・慢性腰痛" type="radio" required v-model="syoujou" id="five">ぎっくり腰・慢性腰痛
-                </label>
-                <label class="btn btn-info" style="width: 100%;" :class="syoujou === '寝違い・むち打ち等首の症状' ? 'check' : ''" for="six">
-                    <input name="place" value="寝違い・むち打ち等首の症状" type="radio" required v-model="syoujou" id="six">寝違い・むち打ち等首の症状
-                </label>
-                <label class="btn btn-info" style="width: 100%;" :class="syoujou === 'EMS(電気的筋肉刺激装置)トレーニング' ? 'check' : ''" for="seven">
-                    <input name="place" value="EMS(電気的筋肉刺激装置)トレーニング" type="radio" required v-model="syoujou" id="seven">EMS(電気的筋肉刺激装置)トレーニング
-                </label>
-                <label class="btn btn-info" style="width: 100%;" :class="syoujou === '健康保険の施術' ? 'check' : ''" for="eight">
-                    <input name="place" value="健康保険の施術" type="radio" required v-model="syoujou" id="eight">健康保険の施術
-                </label>
-                <label class="btn btn-info" style="width: 100%;" :class="syoujou === 'その他' ? 'check' : ''" for="nine">
-                    <input name="place" value="その他" type="radio" required v-model="syoujou" id="nine">その他
-                </label>
-            </div>
-        </div>
-        <div class="form-group">
-            <label>第1希望日</label>
+    <header>
+        <h2>予約フォーム</h2>
+    </header>
+    <div id="app" class="container">
+        <form @submit.prevent="submitForm">
             <div class="form-group">
-                <Datepicker v-model="datepicker1" placeholder="クリックして日時を入力" locale="jp" select-text="選択する" cancel-text="キャンセル" format="yyyy年MM月dd日" :disabled-dates="{'to': new Date()}" />
+                <label>お客様名（カタカナ）</label>
+                <input type="text" v-model="name" class="form-control" required>
             </div>
-        </div>
-        <div class="form-group">
-            <label>第2希望日</label>
             <div class="form-group">
-                <Datepicker v-model="datepicker2" placeholder="クリックして日時を入力" locale="jp" select-text="選択する" cancel-text="キャンセル" format="yyyy年MM月dd日" :disabled-dates="{'to': new Date()}" />
+                <label>電話番号</label>
+                <input type="text" v-model="tel" class="form-control" required>
             </div>
-        </div>
-        <div class="form-group">
-            <label>第3希望日</label>
             <div class="form-group">
-                <Datepicker v-model="datepicker3" placeholder="クリックして日時を入力" locale="jp" select-text="選択する" cancel-text="キャンセル" format="yyyy年MM月dd日" :disabled-dates="{'to': new Date()}" />
+                <label>ご来店回数</label>
+                <div class="btn-group" style="width:100%;">
+                    <label class="btn btn-info" style="width: 49%;" :class="{check: number === '初めて'}">
+                        <input type="radio" v-model="number" value="初めて">初めて
+                    </label>
+                    <label class="btn btn-info" style="width: 49%;" :class="{check: number === '2回目以降'}">
+                        <input type="radio" v-model="number" value="2回目以降">2回目以降
+                    </label>
+                </div>
             </div>
-        </div>
-		<div class="form-group">
-			<label>診察券番号</label>
-			<input v-model="num" type="text" name="num" class="form-control">
-		</div>
-		<div class="form-group">
-			<label>その他・お問い合わせ</label>
-			<textarea v-model="question" name="question" class="form-control" rows="3"></textarea>
-		</div>
-		<div v-if="formError" id="error">
-            <p>入力内容をご確認ください。</p>
-        </div>
-		<div id="cstm-btn" style="text-align:center;">
-			<button v-on:click="submitForm" class="btn btn-danger regist">予約を送信する</button>
-		</div>
+            <div class="form-group">
+                <label>症状</label>
+                <div class="btn-group" style="width:100%;">
+                    <label class="btn btn-info" style="width: 100%;" v-for="symptom in symptoms" :key="symptom" :class="{check: syoujou === symptom}">
+                        <input type="radio" v-model="syoujou" :value="symptom">{{ symptom }}
+                    </label>
+                </div>
+            </div>
+            <div class="form-group">
+                <label>第1希望日</label>
+                <Datepicker v-model="datepicker1" placeholder="クリックして日時を入力" locale="jp" :disabled-week-days="[0]"></Datepicker>
+                <select class="form-control" v-model="datepicker1time">
+                    <option v-for="time in times" :key="time" :value="time">{{ time }}</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label>第2希望日</label>
+                <Datepicker v-model="datepicker2" placeholder="クリックして日時を入力" locale="jp" :disabled-week-days="[0]"></Datepicker>
+                <select class="form-control" v-model="datepicker2time">
+                    <option v-for="time in times" :key="time" :value="time">{{ time }}</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label>第3希望日</label>
+                <Datepicker v-model="datepicker3" placeholder="クリックして日時を入力" locale="jp" :disabled-week-days="[0]"></Datepicker>
+                <select class="form-control" v-model="datepicker3time">
+                    <option v-for="time in times" :key="time" :value="time">{{ time }}</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label>メッセージ<small>（質問等お気軽にご記入ください）</small></label>
+                <textarea v-model="message" class="form-control" rows="6" required></textarea>
+            </div>
+            <button type="submit" class="btn regist" :disabled="isSubmitDisabled">予約を行う</button>
+        </form>
     </div>
-</section>
-</body>
-<script src="https://unpkg.com/@vuepic/vue-datepicker@latest/dist/main.min.js"></script>
-<script>
-    const { createApp, ref } = Vue;
-    const app = createApp({
-        components: {
-            Datepicker: VueDatePicker,
-        },
-        setup() {
-            const name = ref('');
-            const tel = ref('');
-            const number = ref('');
-            const syoujou = ref('');
-            const datepicker1 = ref(null);
-            const datepicker2 = ref(null);
-            const datepicker3 = ref(null);
-            const num = ref('');
-            const question = ref('');
-            const formError = ref(false);
-            const submitForm = () => {
-                if (name.value && tel.value && number.value && syoujou.value && datepicker1.value) {
-                    axios.post('/send', {
-                        name: name.value,
-                        tel: tel.value,
-                        number: number.value,
-                        syoujou: syoujou.value,
-                        datepicker1: datepicker1.value,
-                        datepicker2: datepicker2.value,
-                        datepicker3: datepicker3.value,
-                        num: num.value,
-                        question: question.value
-                    }).then((response) => {
-                        alert('予約を受け付けました。');
-                    }).catch((error) => {
-                        console.error(error);
-                        alert('エラーが発生しました。');
-                    });
-                } else {
-                    formError.value = true;
+    <script src="https://cdn.jsdelivr.net/npm/vue@3.2/dist/vue.global.js"></script>
+    <script src="https://unpkg.com/@vuepic/vue-datepicker@latest"></script>
+    <script>
+        const { createApp } = Vue;
+        const { VueDatePicker } = window['@vuepic/vue-datepicker'];
+
+        createApp({
+            components: {
+                Datepicker: VueDatePicker
+            },
+            data() {
+                return {
+                    name: '',
+                    tel: '',
+                    number: '',
+                    syoujou: '',
+                    datepicker1: '',
+                    datepicker2: '',
+                    datepicker3: '',
+                    datepicker1time: '',
+                    datepicker2time: '',
+                    datepicker3time: '',
+                    message: '',
+                    symptoms: [
+                        '頭痛・偏頭痛', '交通事故施術', '肩こり・腕のしびれ', '臀部・下肢の痛みや痺れ', 'ぎっくり腰・慢性腰痛',
+                        '寝違い・むち打ち等首の症状', 'EMS(電気的筋肉刺激装置)トレーニング', '健康保険の施術', 'その他'
+                    ],
+                    times: [
+                        '08:30', '09:00', '09:30', '10:00', '10:30', '11:00', '11:30', '12:00', '15:00', '15:30',
+                        '16:00', '16:30', '17:00', '17:30', '18:00', '18:30', '19:00', '19:30'
+                    ]
+                };
+            },
+            computed: {
+                isSubmitDisabled() {
+                    return !this.name || !this.tel || !this.number || !this.syoujou || !this.datepicker1 || !this.datepicker1time;
                 }
-            };
-            return {
-                name, tel, number, syoujou, datepicker1, datepicker2, datepicker3, num, question, formError, submitForm
-            };
-        },
-    });
-    app.mount('#app');
-</script>
+            },
+            methods: {
+                submitForm() {
+                    const formattedDate1 = this.formatDate(this.datepicker1, this.datepicker1time);
+                    const formattedDate2 = this.formatDate(this.datepicker2, this.datepicker2time);
+                    const formattedDate3 = this.formatDate(this.datepicker3, this.datepicker3time);
+
+                    const message = `【予約フォーム】
+お名前：${this.name}
+電話番号：${this.tel}
+症状：${this.syoujou}
+来院有無：${this.number}
+希望日時：
+${formattedDate1}
+${formattedDate2}
+${formattedDate3}
+メッセージ：${this.message}`;
+
+                    liff.sendMessages([{
+                        type: 'text',
+                        text: message
+                    }]).then(() => {
+                        console.log('message sent');
+                    }).catch((err) => {
+                        alert('error', err);
+                    }).finally(() => {
+                        liff.closeWindow();
+                    });
+                },
+                formatDate(date, time) {
+                    if (!date || !time) return '';
+                    const d = new Date(date);
+                    return `${d.getFullYear()}年${d.getMonth() + 1}月${d.getDate()}日 ${time}`;
+                }
+            }
+        }).mount('#app');
+    </script>
+</body>
 </html>
